Load Lato font for Javadocs and fix header submenu overlap

--- a/subprojects/docs/src/docs/css/javadoc.css
+++ b/subprojects/docs/src/docs/css/javadoc.css
@@ -1,12 +1,41 @@
-/*
-Gradle javadoc stylesheet
--------------------------
-This file is in 2 sections.
-SECTION 1: is an exact copy of the default stylesheet generated by Java7 javadoc.
-SECTION 2: contains Gradle-specific tweaks to the styles.
-*/
+/* This file is a copy of the default stylesheet generated by Java 9 javadoc styles with minor tweaks (fonts and colors). */
 
-/* SECTION 1 - Default Java7 Style Sheet */
+/* Lato (normal, regular) */
+@font-face {
+    font-family: Lato;
+    font-weight: 400;
+    font-style: normal;
+    src: url("https://assets.gradle.com/lato/fonts/lato-normal/lato-normal.woff2") format("woff2"),
+    url("https://assets.gradle.com/lato/fonts/lato-normal/lato-normal.woff") format("woff");
+}
+/* Lato (normal, italic) */
+@font-face {
+    font-display: swap;
+    font-family: Lato;
+    font-weight: 400;
+    font-style: italic;
+    src: url("https://assets.gradle.com/lato/fonts/lato-normal-italic/lato-normal-italic.woff2") format("woff2"),
+    url("https://assets.gradle.com/lato/fonts/lato-normal-italic/lato-normal-italic.woff") format("woff");
+}
+/* Lato (bold, regular) */
+@font-face {
+    font-display: swap;
+    font-family: Lato;
+    font-weight: 500;
+    font-style: normal;
+    src: url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff2") format("woff2"),
+    url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff") format("woff");
+}
+/* Lato (bold, regular) */
+@font-face {
+    font-display: swap;
+    font-family: Lato;
+    font-weight: 800;
+    font-style: normal;
+    src: url("https://assets.gradle.com/lato/fonts/lato-heavy/lato-heavy.woff2") format("woff2"),
+    url("https://assets.gradle.com/lato/fonts/lato-heavy/lato-heavy.woff") format("woff");
+}
+
 /* Javadoc style sheet */
 /*
 Overall document style
@@ -168,13 +197,6 @@ Navigation bar styles
 
 .navPadding {
     padding-top: 107px;
-}
-
-.fixedNav {
-    position: fixed;
-    width: 100%;
-    z-index: 999;
-    background-color: #ffffff;
 }
 
 .topNav {
@@ -1192,3 +1214,13 @@ table a:hover, table a:link:active {
     margin: 20px 0 0 0;
 }
 
+.sr-only {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
